--- a/css/style.css
+++ b/css/style.css
@@ -21,9 +21,10 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 /* --------------------------------------- */
 /* ----------------- MAIN ---------------- */
 /* --------------------------------------- */
-#main {
+#main, #main2 {
 	width:760px;
 	height: auto;
+	background-color: gray;
 }
 #col_right {
 	float:right;
@@ -118,8 +119,33 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 	color:green;
 }
 
+/* --------------------------------------- */
+/* ------------ PAGE NEWSLETTER ---------- */
+/* --------------------------------------- */
+#main2 {
+	padding: 20px 50px;
+}
+#main2 header {
+	width: 400px;
+	height: 50px;
+	margin: 0 auto;
+}
+#main2 header h1, #main2 header p {
+	text-align: center;
+}
+#main2 .content {
+	margin:0 auto;
+	width: 670px;
+	background-color: red;
 
+}
+#main2 .bloc_redacteur {
+	margin:0 auto;
+	width: 100%;
+	height: auto;
+	background-color: green;
 
+}
 
 /* --------------------------------------- */
 /* --------------- BUTTON ---------------- */
