--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,7 @@
+@charset "utf-8";
 /* --------------------------------------- */
 /* -------------- INITIALISATION --------- */
 /* --------------------------------------- */
-@charset "utf-8";
 body { 
 	font-family: "Arial", Helvetica, sans-serif;
 	color: #464646; font-size: 62.5%;
@@ -21,7 +21,7 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 /* --------------------------------------- */
 /* ----------------- MAIN ---------------- */
 /* --------------------------------------- */
-#main, #main2 {
+#main, #main2, #main3 {
 	width:760px;
 	height: auto;
 	background-color: gray;
@@ -123,6 +123,7 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 /* ------------ PAGE NEWSLETTER ---------- */
 /* --------------------------------------- */
 #main2 {
+	width:660px;
 	padding: 20px 50px;
 }
 #main2 header {
@@ -160,6 +161,63 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 	margin-left: 15px
 
 }
+/* --------------------------------------- */
+/* ------------ PAGE DE FIN APRES AVOIR VOTE ---------- */
+/* --------------------------------------- */
+.clear {
+	clear:both;
+}
+#main3 {
+	width:660px;
+	padding: 20px 50px;
+}
+#main3 header {
+	width: 400px;
+	height: auto;
+	margin: 0 auto;
+	padding-bottom: 20px;
+}
+#main3 header h1, #main3 header p {
+	text-align: center;
+}
+#main3 header h1{
+	font-size: 2em;
+}
+#main3 p {
+	font-size: 1.4em;
+}
+#main3 .bloc_social {
+	width: 540px;
+	margin: 0px auto;
+}
+#main3 .btn_social {
+	width: 220px;
+	height: 210px;
+	background-color: rgb(200,200,200);
+	float: left;
+	margin: 10px 10px;
+	padding: 20px 15px;
+}
+#main3 .btn_social p {
+	font-size: 1.5em;
+	text-align: center;
+}
+#main3 .fb-like {
+	margin-top: 60px;
+	width: 100%;
+	text-align: center;
+}
+#main3 .btn_social p a {
+	display: block;
+	margin-top: 80px;
+	text-align: center;
+	font-weight: bold;
+}
+#main3 .btn_social p a:hover {
+	text-decoration: underline;
+}
+
+
 
 /* --------------------------------------- */
 /* --------------- BUTTON ---------------- */
@@ -169,4 +227,11 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 	box-shadow: none;
 	margin-top:4px;
 }*/
+
+
+
+
+
+
+
 
