--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 body { 
 	font-family: "Arial", Helvetica, sans-serif;
 	color: #464646; font-size: 62.5%;
-	background-color: #e3e3e3;
+	background-color: #fff;
 }
 * { margin: 0; padding: 0; }
 ul { list-style-type: none; }
@@ -170,6 +170,12 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 #main3 {
 	width:660px;
 	padding: 20px 50px;
+	background-color: rgb(231,176,118);
+	background-image: url('../img/bg_404-coupe-H2.png');
+	background-position:center center;
+	background-repeat:no-repeat;
+	background-size: 100% 100%;
+
 }
 #main3 header {
 	width: 400px;
@@ -184,7 +190,8 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 	font-size: 2em;
 }
 #main3 header h2{
-	font-size: 1.8em;
+	font-size: 2em;
+	margin-bottom: 10px;
 }
 #main3 p {
 	font-size: 1.4em;
@@ -194,25 +201,28 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 	margin: 0px auto;
 }
 #main3 .btn_social {
-	width: 220px;
-	height: 210px;
-	background-color: rgb(200,200,200);
+	width: 160px;
+	height: 150px;
+	background-color: rgb(230,201,151);
 	float: left;
 	margin: 10px 10px;
 	padding: 20px 15px;
+	border-radius: 200px;
+	border: 30px solid rgb(155,114,84);
 }
 #main3 .btn_social p {
+	margin-top: 30px;
 	font-size: 1.5em;
 	text-align: center;
 }
 #main3 .fb-like {
-	margin-top: 60px;
+	margin-top: 20px;
 	width: 100%;
 	text-align: center;
 }
 #main3 .btn_social p a {
 	display: block;
-	margin-top: 80px;
+	margin-top: 40px;
 	text-align: center;
 	font-weight: bold;
 }
@@ -229,17 +239,49 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 	border-radius: 3px;
 	font-weight: bold;
 	padding: 2px 5px;
-	margin-top: 60px;
+	margin-top: 38px;
 	text-align: center;
 	font-size: 0.75em;
 }
 #main3 .comments {
 	height: auto;
 	width: auto;
-
-	background-color: rgb(200,200,200);
+	background-color: rgb(230,201,151);
 }
 
+.visit_site {
+	margin-top: 15px;
+	background-color: rgb(230,201,151);
+	width: 100%;
+	height:50px;
+	border-radius: 15px;
+	border: 7px solid rgb(155,114,84);
+	text-align: center;
+}
+.visit_site p{
+	margin-top: 15px;
+	font-size: 1.7em!important;
+
+}
+.visit_site a{
+	color:rgb(236,71,65);
+	font-weight: bold;
+}
+.visit_site a:hover{
+	text-decoration: underline;
+}
+
+.comments {
+	margin
+	padding: 10px 20px;
+	border-radius: 15px;
+	border: 7px solid rgb(155,114,84);
+}
+.comments h4 {
+	font-size: 1.6em;
+	margin: 20px 0px;
+	text-align: center;
+}
 
 /* --------------------------------------- */
 /* --------------- BUTTON ---------------- */
