--- a/css/style.css
+++ b/css/style.css
@@ -24,17 +24,13 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 #main, #main2, #main3 {
 	width:760px;
 	height: auto;
-	background-color: gray;
 	margin: 0 auto;
 }
 #col_right {
 	float:right;
-	width: 340px; /*380*/
-	/*background-color: rgb(167,124,98);*/
+	width: 340px;
 	padding: 20px 20px;
 	height: 500px;
-
-	/*background-color: rgb(231,176,118);*/
 	background-image: url('../img/col_right.png');
 	background-position:center center;
 	background-repeat:no-repeat;
@@ -42,11 +38,9 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 }
 #col_left {
 	float:left;
-	width: 340px;/*
-	background-color: rgb(233,207,167);*/
+	width: 340px;
 	padding: 20px 20px;
 	height: 500px;
-
 	background-image: url('../img/col_left.png');
 	background-position:center center;
 	background-repeat:no-repeat;
@@ -143,6 +137,12 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 #main2 {
 	width:660px;
 	padding: 20px 50px;
+	/*background-color: rgb(231,176,118);*/
+	background-color: rgb(231,176,118);
+	background-image: url('../img/bg_404-coupe.png');
+	background-position:center center;
+	background-repeat:no-repeat;
+	background-size: 100% 100%;
 }
 #main2 header {
 	width: 400px;
@@ -162,23 +162,56 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 #main2 .content {
 	margin:0 auto;
 	width: 670px;
-	background-color: red;
+	background-color: rgb(230,201,151);
+	border-radius: 20px;
 
 }
 #main2 .bloc_redacteur {
 	margin:0 auto;
 	height: auto;
-	background-color: green;
 	padding:10px 20px 10px 11px;
 
 }
-#main2 article{
-	width: 190px;
-	display: inline-block;
-	border:2px solid black;
-	margin-left: 15px
-
+#main2 h2{
+	display: block;
+	margin-left: 28px;
+	padding-top: 15px;
+	padding-bottom: 10px;
+	font-size: 1.6em;
 }
+#main2 button{
+	float: right;
+	margin: 0 20px 20px 0;
+}
+
+#main2 article{
+	padding: 5px 10px;
+	width: 170px;
+	display: inline-block;
+	margin-left: 15px;
+	background-color: rgb(163,120,96);
+	border-radius: 15px;
+	margin-bottom: 20px;
+}
+#main2 article p{
+	text-align: center;
+	font-size: 1.4em;
+	margin-bottom: 10px;
+	color:#fff;
+}
+#main2 article a{
+	float: right;
+}
+#main2 article a:hover{
+	text-decoration: underline;
+}
+#main2 article input{
+	display: block;
+	text-align: center;
+	margin: 0 auto;
+	text-align:center;
+}
+
 /* --------------------------------------- */
 /* ------------ PAGE DE FIN APRES AVOIR VOTE ---------- */
 /* --------------------------------------- */
@@ -305,14 +338,17 @@ header, nav, footer, figure, section, article, figcaption, aside {display: block
 }
 .retour {
 	display: block;
-	margin-top: 20px;
+	margin-top: 130px;
 	margin-bottom: -30px;
 	font-size: 1.5em;
-
 }
-.retour:hover {
+.retour2 {
+	margin-top: 20px;
+	display: block;
+	font-size: 1.5em;
+}
+.retour:hover, .retour2:hover {
 	text-decoration: underline;
-
 }
 
 /* --------------------------------------- */
